--- a/tutorial/copilot_tutorial.tex
+++ b/tutorial/copilot_tutorial.tex
@@ -31,7 +31,7 @@
 \sectionfont{\large\it\centering}
 \subsectionfont{\normalsize\it\centering}
 \usepackage{listings}
-\usepackage{natbib}
+%\usepackage{natbib}
 \usepackage{fancyvrb}
 
 % boxes around figs
@@ -302,7 +302,7 @@ x = 5 + 5
 y :: Stream Int32
 y = x * x
 
-z :: Stream Int32
+z :: Stream Bool
 z = x == 10 && y < 200
 \end{code}
 %\end{minipage}
@@ -383,17 +383,18 @@ stream values cannot depend on future values.  For example, the following stream
 definition is allowed:
 %
 \begin{code}
-h :: Stream Word64
-h = drop 2 g
-  where g = f
-        f = [0,1,2] ++ f
+f :: Stream Word64
+f = [0,1,2] ++ f
+
+g :: Stream Word64
+g = drop 2 f
 \end{code}
 %
 
-But if instead {\tt h} is defined as {\tt h = drop 4 g}, then the definition is
+But if instead {\tt g} is defined as {\tt g = drop 4 f}, then the definition is
 disallowed.  While an analogous stream is definable in a lazy language, we bar
-it in Copilot, since it requires future values of {\tt g} and {\tt f} to be
-generated before producing values for {\tt h}.  This is not possible since
+it in Copilot, since it requires future values of {\tt f} to be
+generated before producing values for {\tt g}.  This is not possible since
 Copilot programs may take inputs in real-time from the environment (see
 Section~\ref{sec:interacting}).
 
@@ -465,8 +466,7 @@ latch :: Stream Bool -> Stream Bool
 latch x = y
   where
   y = if x then not z else z
-    where
-    z = [False] ++ y
+  z = [False] ++ y
 \end{code}
 \end{minipage}
 \caption{A latch. The specification is provided at the left and the
@@ -492,11 +492,10 @@ $\mathtt{inc}_i$: & $\mathtt{reset}_i$: & $\mathtt{cnt}_i$: \\
 \hline
 $F$ & $F$ & $\mathtt{cnt}_{i-1}$ \\
 \hline
-$F$ & $T$ & $0$ \\
+* & $T$ & $0$ \\
 \hline
 $T$ & $F$ & $\mathtt{cnt}_{i-1} + 1$ \\
 \hline
-$T$ & $T$ & $0$
 \end{tabular}
 \end{minipage}
 \hspace{1cm}
@@ -711,7 +710,7 @@ example,
 func :: Stream Word16
 func = externFun "f" [funArg e0, funArg nats] Nothing
   where
-  externW8 "x" Nothing
+  e0 = externW8 "x" Nothing
   nats :: Stream Word8
   nats = [0] ++ nats + 1
 \end{code} 
@@ -767,7 +766,7 @@ define a monitor that surveys the above property:
 propTempRiseShutOff :: Spec
 propTempRiseShutOff = 
   trigger "over_temp_rise" 
-    (not (overTempRise && running)) []
+    (overTempRise && running) []
 
   where
   max = 500 -- maximum engine temperature
@@ -778,7 +777,7 @@ propTempRiseShutOff =
   temp = extern "temp" Nothing
 
   overTempRise :: Stream Bool
-  overTempRise = drop 2 temps > (constant 2.3 + temps)
+  overTempRise = drop 2 temps > (2.3 + temps) 
  
   running :: Stream Bool
   running = extern "running" Nothing
@@ -789,7 +788,7 @@ Here, we assume that the external variable {\tt temp} denotes the temperature of
 the engine and the external variable {\tt running} indicates whether the fuel
 injector is running.  The external function {\tt over\_temp\_rise} is called
 without any arguments if the temperature rises more than 2.3 degrees within 0.2
-seconds and the engine is not shut off.
+seconds and the engine is not shut off.  Notice there is a latency of one tick between when the property is violated and when the guard becomes true.
 \end{example}
 
 \subsection{Explicit Sharing}
@@ -804,8 +803,8 @@ s1 = let x = nats + nats
 \end{minipage}
 \begin{minipage}{0.5\textwidth}
 \begin{code}
-s2 = local (nats * nats) $
-    \ x -> x + x
+s2 = local (nats + nats) $
+    \ x -> x * x
 \end{code} 
 % $
 \end{minipage}
@@ -955,7 +954,7 @@ originally developed by Tom Hawkins at Eaton Corp. for developing control
 systems.  The second back-end is called \emph{copilot-sbv} and targets the SBV
 language\footnote{\url{http://hackage.haskell.org/package/sbv}}, originally
 developed by Levent Erk\"{o}k.  SBV is primarily used as an interface to SMT
-solvers~\cite{BarST-SMT-10} and also contains a C-code generator.  Both
+solvers~\cite{smt} and also contains a C-code generator.  Both
 languages are open-source.
 
 The two back-ends are installed with Copilot, and they can be imported,
@@ -971,9 +970,7 @@ import Copilot.Compile.SBV
 \end{code}
 
 After importing a back-end, the interface for compiling is as
-follows:\footnote{Two explanations are in order: (1) {\tt reify} is an
-  optimization that improves sharing in the expressions to be compiled,
-  improving efficiency~\cite{DSLExtract}, and {\tt >>=} is a higher-order
+follows:\footnote{Two explanations are in order: (1) {\tt reify} allows sharing in the expressions to be compiled~\cite{DSLExtract}, and {\tt >>=} is a higher-order
   operator that takes the result of reification and ``feeds'' it to the compile
   function.}
 %
@@ -1302,11 +1299,11 @@ For detailed background information on Copilot we refer to \cite{PikeGoodloe2010
 \section*{Acknowledgement}
 
 The authors are grateful for NASA Contract NNL08AD13T to Galois Inc. and the
-National Institute of Aerospace, which partially supported this work.
+National Institute of Aerospace, which partially supported this work.  Thanks to Lars Kuhtz, Benedetto Di~Vito, 
 
 {
 \addcontentsline{toc}{section}{References}
-\bibliographystyle{plainnat}
+\bibliographystyle{alpha}
 \bibliography{mybib}
 }
 
