Updated todos and tutorial bib.

--- a/tutorial/mybib.bib
+++ b/tutorial/mybib.bib
@@ -49,7 +49,7 @@
   title     = "Satisfiability Modulo Theories",
   chapter   = 26,
   pages     = "825--885",
-    Title = {Handbook of Satisfiability},
+    booktitle = {Handbook of Satisfiability},
     Publisher = {IOS Press},
     Year = {2009},
     Series = {Frontiers in Artificial Intelligence and Applications}
