ICFP: Updated bib entries.

--- a/ICFP2012/paper.bib
+++ b/ICFP2012/paper.bib
@@ -4,6 +4,35 @@
 %==================
 
 
+@InProceedings{safe,
+  author =       {David Terei and Simon Marlow and Simon Peyton Jones and David Mazi\`{e}res},
+  title =        {Safe Haskell},
+  OPTcrossref =  {},
+  OPTkey =       {},
+  booktitle = {Proceedings of the Haskell Symposium},
+  OPTpages =     {},
+  year =      {2012},
+  OPTeditor =    {},
+  OPTvolume =    {},
+  OPTnumber =    {},
+  OPTseries =    {},
+  OPTaddress =   {},
+  OPTmonth =     {},
+  OPTorganization = {},
+  Tpublisher = {ACM},
+  OPTnote =      {},
+  OPTannote =    {}
+}
+
+@inproceedings{fof,
+    author = {Dagand, Pierre E. and Baumann, Andrew and Roscoe, Timothy},
+    booktitle = {Proceedings of the Fifth Workshop on Programming Languages and Operating Systems (PLOS '09)},
+    pages = {1--5},
+    publisher = {ACM},
+    title = {{Filet-o-Fish}: practical and dependable domain-specific languages for {OS} development},
+    year = {2009}
+}
+
 
 @Misc{ghc,
   key =       {GHC},
@@ -423,7 +452,7 @@ OPTnote = {Available at \url{http://www-verimag.imag.fr/index.php?page=techrep-l
 
 @InProceedings{CaspiPHP87,
   author = 	 {P. Caspi and D. Pialiud and N. Halbwachs and J. Plaice},
-  title = 	 {{LUSTRE}: a Declratative Language for Programming Synchronous Systems},
+  title = 	 {{LUSTRE}: a Declarative Language for Programming Synchronous Systems},
   booktitle = {14th Symposium on Principles of Programming Languages},
   pages = 	 {178-188},
    year = 	 {1987}
@@ -1040,7 +1069,7 @@ month = {December}
 @inproceedings{mjrty,
   author    = {Robert S. Boyer and
                J. Strother Moore},
-  title     = {MJRTY: A Fast Majority Vote Algorithm},
+  title     = {{MJRTY}: A Fast Majority Vote Algorithm},
   booktitle = {Automated Reasoning: Essays in Honor of Woody Bledsoe},
   year      = {1991},
   pages     = {105-118}
